rest/rest-deployment.yaml
apiVersion: apps/v1 #  for k8s versions before 1.9.0 use apps/v1beta2  and before 1.8.0 use extensions/v1beta1
kind: Deployment
metadata:
  name: rest-server
spec:
  selector:
    matchLabels:
      app: rest-server
  replicas: 1
  template:
    metadata:
      labels:
        app: rest-server
    spec:
      containers:
      - name: rest-server
        image: rezaakb/rest-server:v5
        resources:
          requests:
            cpu: 400m
            memory: 2Gi
        ports:
        - containerPort: 5000
