rest/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-server
  labels:
    app: rest-server
spec:
  type: NodePort
  ports:
  - protocol: "TCP"
    port: 5000
    targetPort: 5000
  selector:
    app: rest-server
