rest/rest-ingress.yaml
#
# See https://kubernetes.io/docs/concepts/services-networking/ingress/
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
    #kubernetes.io/ingress.class: "gce"
    nginx.ingress.kubernetes.io/proxy-body-size: 16m

spec:
  rules:
  - http:
    paths:
    - path: /*
      pathType: ImplementationSpecific
      backend:
        service:
          name: rest-server
          port:
            number: 5000
#
# Your ingress rules here
#
